[gd_scene load_steps=7 format=3 uid="uid://c0uvwprmivkbo"]

[ext_resource type="Script" path="res://Acte2_Pirate/Scripts/PNJ/boss_pirate.gd" id="1_sy8b6"]
[ext_resource type="Texture2D" uid="uid://nx6fmp6mgejd" path="res://Acte2_Pirate/ImportImages/PNJ/Malakar/Malakar Voidwalker.png" id="1_vdsut"]
[ext_resource type="Texture2D" uid="uid://d18k8q8f0b7mi" path="res://Acte2_Pirate/ImportImages/PNJ/Malakar/bc71c818-a63d-415d-87aa-872f9c898a43-removebg-preview.png" id="2_of4qw"]
[ext_resource type="Texture2D" uid="uid://bei6olbntdpx4" path="res://Acte2_Pirate/ImportImages/PNJ/Malakar/Malakar.png" id="3_liob6"]
[ext_resource type="PackedScene" uid="uid://blluf2fe3v25" path="res://Acte3_Vampire/Scenes/Boss/Attaque/attaque_melee_lucius.tscn" id="5_r87jp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6b0oa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}, {
"duration": 1.0,
"texture": ExtResource("3_liob6")
}, {
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}],
"loop": false,
"name": &"attaque",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}, {
"duration": 1.0,
"texture": ExtResource("1_vdsut")
}, {
"duration": 1.0,
"texture": ExtResource("1_vdsut")
}, {
"duration": 1.0,
"texture": ExtResource("1_vdsut")
}, {
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}],
"loop": false,
"name": &"cri",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}],
"loop": true,
"name": &"deplacement",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_of4qw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="bossPirate" type="CharacterBody2D" groups=["MalakarBoss"]]
script = ExtResource("1_sy8b6")
moveSpeed = 100

[node name="Malakar Voidwalker" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -219)
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_6b0oa")
animation = &"deplacement"

[node name="AttaqueMelee" parent="Malakar Voidwalker" groups=["attaqueMelee"] instance=ExtResource("5_r87jp")]
position = Vector2(-195, -1.667)
scale = Vector2(4, 4)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-8, 46)
scale = Vector2(1.2, 1.2)
polygon = PackedVector2Array(28.3333, -45.8333, 107.5, -35.8333, 90, -75.8333, 92, -92, 94, -97, 85.8333, -133.333, 95, -210.833, 91.6667, -259.167, 54, -332, 33.3333, -333.333, 13.3333, -331.667, -19, -328, -22, -320, -32, -311, -37, -297, -48, -278, -48.3333, -255, -44.1667, -227.5, -34, -206, -43, -170, -49.1667, -130, -45.8333, -85, -65.8333, -71.6667, -81.6667, -63.3333, -62.5, -47.5, -20, -48.3333)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="TimerBeforeMoveAgain" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerBeforeMoveAgain" to="." method="_on_timer_before_move_again_timeout"]

[editable path="Malakar Voidwalker/AttaqueMelee"]
